--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.446.0",
     "mongoose": "^8.6.4",
     "next": "14.2.11",
-    "next-auth": "^4.24.8",
+    "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
