--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.6.4",
     "next": "14.2.11",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
